--- a/site/index.html
+++ b/site/index.html
@@ -76,8 +76,6 @@
  <!-- Storia section -->
   <div class="w3-container w3-center w3-padding-32" id="storia">
     <div class="w3-content w3-justify">
-      <div class="text-content"></div>
-
       <div class="w3-container w3-center w3-padding-32">
 
         <h1 class="main-titles"><b>Storia di un chatbot</b></h1>
@@ -210,13 +208,38 @@
         Le persone interagiscono con ChatGPT in maniera variegata, dando libero sfogo alle proprie fantasie, inclinazioni e interessi. <br>
         In generale, il chatbot viene utilizzato per scrivere elaborati di testo di vario tipo (email, presentazioni, introduzioni, racconti, sceneggiature etc) e per fare sintesi; è di aiuto nei compiti scolastici e accademici, e nella programmazione (è usato per creare siti web, o per fare debugging dei codici e chiedere spiegazioni). 
       </p>
+      <p>
+        Su Twitter in lingua inglese, sono stati individuati alcuni utlizzzi particolari di ChatGPT:
+      </p>
+      <p>
+        <b><i>Just for fun, we asked ChatGPT to write a haiku for us on fake news. And, <a href="https://t.co/ecglrw7ub" target="_blank">it delivered</a></i>
+      </b>
+      <p>
+        Purtroppo il tweet non è più disponibile e non è stato possibile leggere l'<i>haiku</i>, componimento poetico nato in Giappone nel XVII secolo).
+      </p>
+      <p>
+        <b><i>We asked chat GPT to write a sex toy joke and this is what it wrote: Why was the vibrator feeling cold? Because it left its batteries in the refrigerator!</i></b>
+      </p>
+      <p>
+        <b><i>I asked #ChatGPT to write a <a href="https://t.co/fjGiK1y5CA" target="_blank">prayer that can be said at same-sex blessings...</a></i></b>
+      </p>
+      <p>
+        <b><i>Some interesting questions people ask ChatGPT: Can you generate a recipe for a three course meal? #ChatGPT #ChatGPTQuestions #Openai</i></b>
+      </p>
+      <p>
+        <b><i>Chat GPT and Me — I ask ChatGPT <a href="https://t.co/b22jyyuqfj" target="_blank"> to Daydream</a></i></b> 
+      </p>
+      <p>
+        <b><i>I interviewed #ChatGPT who is a music enthusiast. Now here is yet another interesting use case of this AI. You could ask ChatGPT to pretend to be any role you want it to be and interview its AI just like you would interview a real person</p></i></b>
+      </p>
     </div>
   </div>
 
   <!-- Parole e tendenze section -->
-  <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="contact">
+  <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey" id="contact">
     <div class="w3-content w3-justify w3-container">
       <h1 class="main-titles"><b>Parole e tendenze</b></h1>
+
       <img src="img/dall-e11.png" alt="Robot che esegue calcoli" class="w3-image w3-padding-32 w3-center force-center" width="600" height="650">
       <div class="graphics-btn-container">
         <h2>Parole più frequenti</h2>
@@ -244,7 +267,7 @@
       </div>
       <h3>Esplorazioni sui dati in inglese</h3>
       <p>
-        <b class="green">Math/Matematica</b>: svariati tweet in lingua inglese si riferiscono all'incapacità di ChatGPT di svolgere compiti matematici, mentre in italiano i post contenenti la parola "matematica" sono legati all'uso di ChatGPT da parte degli studenti a scuola (abitudine che suscita preoccupazioni di carattere pedagogico ed educativo).
+        <b class="green">Math</b>: svariati tweet in lingua inglese si riferiscono all'incapacità di ChatGPT di svolgere compiti matematici complessi, altri invece ne esaltano le doti, dunque l'opinione degli utenti su Twitter sembra divisa su questo tema. 
       </p>
       <p>
         <b class="green">Erotic</b>: alcuni utenti hanno interagito con ChatGPT per creare componimenti erotici di varia tipologia, dal racconto sci-fi alla poesia. È stato individuato in questo ambito un utilizzo ancora più particolare:
@@ -282,6 +305,9 @@
       </div>
       <h3>Esplorazioni sui dati in italiano</h3>
       <p>
+        <b class="green">Matematica</b>: in italiano i post contenenti la parola "matematica" sono legati all'uso di ChatGPT da parte degli studenti a scuola e questa abitudine suscita preoccupazioni di carattere pedagogico ed educativo.
+      </p>
+      <p>
         Nel Corpus di tweet in italiano non compaiono post relativi ad un utilizzo erotico di ChatGPT, mentre ricercando nei dati attraverso una keyword semanticamente vicina, ma più diretta, sono state individuate alcune informazioni interessanti:
       </p>
       <p>
@@ -316,13 +342,13 @@
   
 
    <!-- Intelligenza section -->
-  <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="intelligenza">
+  <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey" id="intelligenza">
     <div class="w3-content w3-justify w3-container">
       <h1 class="main-titles"><b>Intelligenza Artificiale</b></h1>
       <img src="img/dall-e4.png" alt="Robot immerso in una dimensione onirica" class="w3-image w3-center w3-padding-32 force-center" width="600" height="650">
       <h2>ChatGPT è realmente in grado di capire?</h2>
       <p>I large language models come ChatGPT sono talmente grandi e complessi da suscitare sorprese inaspettate: hanno iniziato a mostrare comportamenti sorprendenti, che non erano stati previsti. <br>
-       “Sono sorpreso dalle capacità che questi modelli hanno sviluppato” <a href="https://www.quantamagazine.org/the-unpredictable-abilities-emerging-from-large-ai-models-20230316/" target="_blank"> ha dichiarato Ethan Dyer</a>, computer scientist di Google Research che lavora da anni nel campo dell’AI. “È sorprendente perché questi modelli in teoria hanno una sola direttiva: prendere in input una stringa di testo e predire cosa verrà dopo, ripetutamente, su basi puramente statistiche. Gli esperti nel settore avevano previsto che con l’aumentare della dimensione dei dati sarebbero migliorate le performance su task già noti, ma non si aspettavano che i modelli all’improvviso sarebbero stati in grado di svolgere così tante nuove (e imprevedibili) attività”.</p>
+       “Sono meravigliato dalle capacità che questi modelli hanno sviluppato” <a href="https://www.quantamagazine.org/the-unpredictable-abilities-emerging-from-large-ai-models-20230316/" target="_blank"> ha dichiarato Ethan Dyer</a>, computer scientist di Google Research che lavora da anni nel campo dell’AI. “È sorprendente perché questi modelli in teoria hanno una sola direttiva: prendere in input una stringa di testo e predire cosa verrà dopo, ripetutamente, su basi puramente statistiche. Gli esperti nel settore avevano previsto che con l’aumentare della dimensione dei dati sarebbero migliorate le performance su task già noti, ma non si aspettavano che i modelli all’improvviso sarebbero stati in grado di svolgere così tante nuove (e imprevedibili) attività”.</p>
       <h2>Proprietà emergenti</h2>
       <p>A quanto pare i LLMs sembrano sviluppare centinaia di attività emergenti - dai calcoli matematici alla produzione di testi e di codici, fino al riconoscimento dei titoli di film tramite emoji (come in un esperimento condotto dal team di Dyer).<br>
       I modelli linguistici odierni sono stati dimensionati principalmente in base a tre fattori: quantità di calcolo, numero di parametri e dimensione del set di dati di addestramento. Un'abilità è considerata "emergente" se non è presente nei modelli più piccoli ma lo è in quelli più grandi. In generale, si può considerare l'emergere di nuove proprietà come una funzione di molte variabili correlate, la scala in cui si osserva per la prima volta l'emergere di un'abilità dipende da una serie di fattori e non è una proprietà immutabile, le prestazioni sembrano migliorare notevolmente oltre un certo ordine di grandezza dei parametri.
@@ -338,8 +364,8 @@
       È vero che il dato linguistico manca di correlazione con la concretezza del mondo reale, però contiene tanta informazione. Non è un caso che questi comportamenti emergenti si siano visti la prima volta sui testi, gli stessi algoritmi sono stati applicati anche alle immagini, ma non è  emerso lo stesso comportamento intelligente. Lo abbiamo potuto osservare sul testo. Non è una casualità che le parole, che la capacità del linguaggio, siano forse ciò che più ci distingue dagli altri animali. <br>
       Non è la vista, la forza o la velocità, è il linguaggio, e il sistema ha fatto emergere questa competenza sul linguaggio. Credo che quello che abbiamo visto oggi sul testo è un qualcosa che ci ha sorpreso tutti, forse qualcuno se lo immaginava, ma non in così poco tempo. Chiamarla intelligenza oppure no è un modo per definire le cose. Sicuramente funziona in maniera diversa da un essere umano. C’è ragionamento o non c’é, sicuramente non c’è quello umano, però c’è una simulazione di quel comportamento. Quando la simulazione è al 100% poi decidi tu se chiamarla A o chiamarla B.<br>
       C’è stato uno scandalo perché tantissimi Kenyani sono stati sfruttati per creare dei Corpus Gold (annotati in maniera corretta) per addestrare ChatGPT. Questo vuol dire che di dati linguistici annotati ne abbiamo bisogno ancora tanto,  quindi il passaggio ad una macchina in grado di fare tutto senza una supervisione umana è ancora molto distante.
-      Possiamo fidarci che siano stati utilizzati solo i dati del web? Comunicazioni coi cellulari, interazioni uomo macchina, davanti alla tv o con Amazon Alexa, potrebbero essere tutti dati che vengono utilizzati. Non possiamo saperlo con esattezza perché sono fatti da aziende private, e questo è un altro grande problema. <br>
-      Come ha ricordato il prfossor Attardi nell'intervista citata sopra “Non ha senso dare la colpa alla tecnologia, i danni sono dovuti alle aziende che sfruttano in maniera distorta la tecnologia. Bisogna distinguere tra tecnologia e uso malevolo e deleterio di essa. L’etica è una caratteristica umana, che non ha a che fare con la tecnologia, assumiamo che le persone abbiano libero arbitrio e puniamo le loro azioni, non gli strumenti che utilizzano”.
+      Possiamo fidarci che siano stati utilizzati solo i dati del web? Comunicazioni coi cellulari, interazioni uomo macchina, davanti alla tv o con Amazon Alexa, potrebbero essere tutti dati che vengono utilizzati. Non possiamo saperlo con esattezza perché sono fatti da aziende private, e questo è un altro grande problema". <br>
+      Come ha ricordato il professor Attardi nell'intervista citata sopra “Non ha senso dare la colpa alla tecnologia, i danni sono dovuti alle aziende che la sfruttano in maniera distorta. Bisogna distinguere tra tecnologia e uso malevolo e deleterio di essa. L’etica è una caratteristica umana, che non ha a che fare con la tecnologia, assumiamo che le persone abbiano libero arbitrio e puniamo le loro azioni, non gli strumenti che utilizzano”.
     </p>
     </div>
   </div>
