--- a/site/index.html
+++ b/site/index.html
@@ -106,7 +106,7 @@
             </div>
           </div>
         </div>
-        <img src="img/dall-e4.png" alt="Robot tra i fiori" class="w3-image w3-center w3-padding-32" width="600" height="650">
+        <img src="img/dall-e10.png" alt="Robot e umani a un tavolo che bevono" class="w3-image w3-center w3-padding-32" width="600" height="650">
         <div class="w3-content w3-justify">
           <h2 id="sez1">Cos’è ChatGPT</h2>
           <p>ChatGPT è un chatbot sviluppato dalla società americana OpenAI, fondata da Elon Musk, Sam Altman Greg Brockman, Ilya Sutskever, Wojciech Zaremba, and John Schulman nel 2015.<br>
@@ -116,9 +116,11 @@
 
 
       <h2 id="sez2">Come funziona ChatGPT</h2>
+      <img src="img/dall-e12.png" class="image-container" alt="Robot in luogo con alberi e fiori"> 
         <p>ChatGPT è un chatbot basato su intelligenza artificiale specializzato nel dialogo uomo-macchina. È in grado di comporre poesie, opere teatrali, testi di canzoni su un determinato tema e persino di spiegare le barzellette. Come siamo arrivati ad un modello con un livello di competenza morfosintattica così accurata e in grado di generare varie tipologie di testi in maniera veloce e tremendamente plausibile, che dimostra anche raffinate capacità di ragionamento?<br>
 
-          “Il Natural Language Processing ha visto miglioramenti senza precedenti nel corso degli ultimi anni, e i progressi sono avvenuti con la sostituzione dei cosiddetti sistemi di apprendimento tradizionali (modelli statistici, basati su sistemi di machine learning) a modelli di algoritmi deep learning" <a href="https://alemiaschi.github.io/files/Seminario_LABCD_8_marzo_2023.pdf"  target="_blank">ha spiegato Alessio Miaschi</a>, ricercatore del CNR, durante un <a href="http://www.labcd.unipi.it/seminari/le-risorse-linguistiche-al-tempo-delle-reti-neurali/" target="_blank"> seminario di cultura digitale</a> all'Università di Pisa.<br></p>
+          “Il Natural Language Processing ha visto miglioramenti senza precedenti nel corso degli ultimi anni, e i progressi sono avvenuti con la sostituzione dei cosiddetti sistemi di apprendimento tradizionali (modelli statistici, basati su sistemi di machine learning) a modelli di algoritmi deep learning" <a href="https://alemiaschi.github.io/files/Seminario_LABCD_8_marzo_2023.pdf"  target="_blank">ha spiegato Alessio Miaschi</a>, ricercatore del CNR, durante un <a href="http://www.labcd.unipi.it/seminari/le-risorse-linguistiche-al-tempo-delle-reti-neurali/" target="_blank"> seminario di cultura digitale</a> all'Università di Pisa.<br>
+        </p>
         <p>
           “In passato, dopo una lunga catena di preprocessing e annotazione linguistica, si passava alla fase di modeling, ovvero l’estrazione di una serie di caratteristiche e features da testi linguisticamente annotati, che venivano poi usate come caratteristiche in input per un modello di apprendimento usato per svolgere vari compiti di NLP, entity recognition etc.<br>
         Adesso, con i modelli di <strong>deep learning</strong>, dopo una fase breve di <i>preprocessing</i>, il testo viene dato in pasto alla rete neurale che dopo il momento di apprendimento-addestramento, si specializza nella risoluzione di un determinato task.
@@ -166,7 +168,7 @@
             </div>
           </div>
         </div>
-        <img src="img/dall-e3.png" alt="Computer circondato da robot" class="w3-image w3-center w3-padding-32 force-center" width="600" height="650">
+        <img src="img/dall-e13.png" alt="Robot tra i fiori" class="w3-image w3-center w3-padding-32 force-center" width="600" height="650">
       </div>
 
       <h2 id="sez4">L'arrivo di ChatGPT</h2>
@@ -177,10 +179,11 @@
       </p>
 
       <h2 id="sez5">Sentiment Analysis</h2>
+      <img src="img/dall-e3.png" alt="Computer circondato da robot" class="image-container-right">
       <p>
         Al fine di determinare come le persone hanno recepito questa nuovo tool, sono stati recuperati post dai social media Reddit e Twitter, in lingua inglese e italiana, ed è stata effettuata la Sentiment Analysis con 2 strumenti diversi, NLTK e Textblob, 2 librerie Python che permettono di eseguire operazioni di <i>Natural Language Processing</i> su testi.<br>
         <i>L'anallisi del sentimento</i> consiste in un processo di categorizzazione digitale di pezzi di testo attraverso l'uso di algoritmi, in modo da poter definire se una frase ha connotazione positiva, neutra oppure negativa.
-      </p>
+      </p><br>
 
       <h2 id="sez6">Sentiment analysis sui dataset in italiano e inglese</h2>
       <p>
@@ -198,6 +201,7 @@
 
     </div>
   </div>
+
   <!-- Utilizzi section -->
   <div class="w3-container w3-light-grey w3-center w3-padding-32" id="utilizzi">
     <h1 class="main-titles"><b>Interazione Uomo Macchina</b></h1>
@@ -209,8 +213,9 @@
         In generale, il chatbot viene utilizzato per scrivere elaborati di testo di vario tipo (email, presentazioni, introduzioni, racconti, sceneggiature etc) e per fare sintesi; è di aiuto nei compiti scolastici e accademici, e nella programmazione (è usato per creare siti web, o per fare debugging dei codici e chiedere spiegazioni). 
       </p>
       <p>
-        Su Twitter in lingua inglese, sono stati individuati alcuni utlizzzi particolari di ChatGPT:
+        Su Twitter, sono stati individuati alcuni utlizzzi particolari di ChatGPT:
       </p>
+      <h3 class="green">Lingua inglese</h3>
       <p>
         <b><i>Just for fun, we asked ChatGPT to write a haiku for us on fake news. And, <a href="https://t.co/ecglrw7ub" target="_blank">it delivered</a></i>
       </b>
@@ -230,7 +235,34 @@
         <b><i>Chat GPT and Me — I ask ChatGPT <a href="https://t.co/b22jyyuqfj" target="_blank"> to Daydream</a></i></b> 
       </p>
       <p>
-        <b><i>I interviewed #ChatGPT who is a music enthusiast. Now here is yet another interesting use case of this AI. You could ask ChatGPT to pretend to be any role you want it to be and interview its AI just like you would interview a real person</p></i></b>
+        <b><i>I interviewed #ChatGPT who is a music enthusiast. Now here is yet another interesting use case of this AI. You could ask ChatGPT to pretend to be any role you want it to be and interview its AI just like you would interview a real person</i></b>
+      </p>
+      <h3 class="green">Lingua italiana</h3>
+      <p>
+        <b><i>Abbiamo chiesto a #Chatgpt di creare una storia che includesse: Il sindaco di #Benevento, dei #cinghiali, il #golf e dell'acqua contaminata da #tetracloroetilene. <a href="https://t.co/oaKAEfaWTc" target="_blank">Quello che ne viene fuori</a> ci sembra una soluzione migliore di quelle adottate fino ad ora</i></b>
+      <p>
+        <b><i>Nel 1970 dal dialogo fra #JamesBaldwin e #MargaretMead nasce il libro "Discussione sulla razza". Cosa si direbbero oggi davanti a #BlackLivesMatter? L'abbiamo <a href="https://t.co/bTySq6Q6d3"> chiesto a #ChatGPT</a></i></b>
+      </p>
+      <p>
+        <b><i>Sono davvero preoccupato per il futuro dell’editoria italiana se i giornali tradizionali non si evolveranno". Abbiamo chiesto a #ChatGPT cosa farebbe per salvare il giornalismo italiano. <a href="https://t.co/q1cCCxA77C" target="_blank">Questa</a> è stata la sua risposta</i></b>
+      </p>
+      <p>
+        <b><i>Chiesto a chat gpt di <a href="https://t.co/0MngK293WM" target="_blank"> scrivere un testo usando i titoli della tracklist</a> e STO URLANDO</i></b>
+      </p>
+      <p>
+        <b><i>Ho chiesto a #ChatGPT se #dantealighieri si potesse considerare #fascista. Ecco la sua  <a href="https://t.co/WJnSAlCjN" target="_blank">risposta</a></i></b> 
+      </p>
+      <p>
+        Purtroppo anche questo contenuto non è più disponibile.
+      </p>
+      <p>
+        <b><i>Ho chiesto a #ChatGPT quante volte in 24 ore le lancette di un orologio formano un angolo di 90 gradi. É stato impreciso ed evasivo come ero io durante le interrogazioni di chimica al liceo, ha anche simulato un attacco di dissenteria e la morte del nonno per prendere tempo</i></b>
+      </p>
+      <p>
+        <b><i>Stamattina da Linus e Nicola parlano di intelligenza artificiale. Combinazione l’altro ieri sera, abbiamo chiesto a chat GPT un finale alternativo di Lost. Non ci è piaciuto però ho apprezzato lo sforzo: pronto in pochissimi secondi</i></b>
+      </p>
+      <p>
+        <b><i>Ho chiesto a #ChatGPT di scrivere un monologo per #Sanremo2023. Se qualcuno di voi conduttori ancora non ha preparato niente oppure ha scritto la solita roba cringe prendete e <a href="https://t.co/DEHBWf4VSv">usufruitene tutti</a> </i></b>
       </p>
     </div>
   </div>
@@ -299,7 +331,7 @@
       <p>Anche per l'italiano le parole più utilizzate nei post sono <b class="green">scritto</b>, <b class="green">strumento</b>, <b class="green">chiesto</b>, <b class="green">futuro</b>,<b class="green">lavoro</b>, <b class="green">fare</b>, <b class="green">tecnologia</b>, <b class="green">Google</b>, ma compaiono anche <b class="green">Bing</b> e <b class="green">Microsoft</b>, partner commerciali di OpenAi. </p>
       <div class="image-container">
         <figure>
-          <img id="hover" src="img/WordcloudITA.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+          <img id="hover" src="img/WordcloudITA.png" alt="worcloud delle parole italiane più frequenti" class="w3-image w3-padding-32" width="600" height="650">
           <figcaption>WordCloud: rappresentazione visuale delle parole più usate su Twitter.it</figcaption>
         </figure>
       </div>
@@ -350,6 +382,7 @@
       <p>I large language models come ChatGPT sono talmente grandi e complessi da suscitare sorprese inaspettate: hanno iniziato a mostrare comportamenti sorprendenti, che non erano stati previsti. <br>
        “Sono meravigliato dalle capacità che questi modelli hanno sviluppato” <a href="https://www.quantamagazine.org/the-unpredictable-abilities-emerging-from-large-ai-models-20230316/" target="_blank"> ha dichiarato Ethan Dyer</a>, computer scientist di Google Research che lavora da anni nel campo dell’AI. “È sorprendente perché questi modelli in teoria hanno una sola direttiva: prendere in input una stringa di testo e predire cosa verrà dopo, ripetutamente, su basi puramente statistiche. Gli esperti nel settore avevano previsto che con l’aumentare della dimensione dei dati sarebbero migliorate le performance su task già noti, ma non si aspettavano che i modelli all’improvviso sarebbero stati in grado di svolgere così tante nuove (e imprevedibili) attività”.</p>
       <h2>Proprietà emergenti</h2>
+      <img src="img/dall-e14.png" class="image-container-right" alt="Robot che saluta">
       <p>A quanto pare i LLMs sembrano sviluppare centinaia di capacità non previste - dai calcoli matematici alla produzione di testi e di codici, fino al riconoscimento dei titoli di film tramite emoji (come in un esperimento condotto dal team di Dyer).<br>
       I modelli linguistici odierni sono stati dimensionati principalmente in base a tre fattori: quantità di calcolo, numero di parametri e dimensione del set di dati di addestramento. Un'abilità è considerata "emergente" se non è presente nei modelli più piccoli ma lo è in quelli più grandi. In generale, si può considerare l'emergere di nuove proprietà come una funzione di molte variabili correlate, la scala in cui si osserva per la prima volta l'emergere di un'abilità dipende da una serie di fattori e non è una proprietà immutabile, le prestazioni sembrano migliorare notevolmente oltre un certo ordine di grandezza dei parametri.
       “I fenomeni complessi possono essere ricondotti a una semplice legge probabilistica, nel caso di un language model si tratta di predire la prossima parola" ha dichiarato il professor Giuseppe Attardi in <a href= "https://www.youtube.com/watch?v=ej5lEP1bmdQ" target="_blank">un'intervista online</a> in cui ci si interroga sullo sviluppo delle AI. <br>
@@ -359,6 +392,7 @@
       Il comportamento emergente non è al momento spiegabile, nemmeno gli stessi ricercatori che lo stanno osservando sono in grado di spiegarlo, ha sorpreso tutti. Ci sono degli studi. Alcuni sostengono che questi sistemi non abbiano  capacità di fare ragionamenti matematici o logici, nessuno ha mai insegnato loro a fare conti, eppure in certi casi riesce a fare anche ragionamenti complessi. <br>
       In genere i sistemi di apprendimento automatico arrivano ad un certo plateau, la cosa sorprendente è che nel caso dei language model questo non è avvenuto, non si vede ancora la curva rallentare la crescita, con l’aggiunta di nuovi dati la curva continua a crescere. Ci sono  risultati più stupefacenti: più si aumentano i dati, più avviene fenomeno chiamato delle capacità emergenti: il sistema diventa in grado di fare cose che non sapeva fare, che non erano previste. Spuntano fuori, c’è una specie di salto quantico che avviene a certo momento con la crescita della dimensione dei sistemi”.</p>
       <h2>ChatGPT è intelligente?</h2>
+      <img src="img/dall-e15.png" class="image-container" alt="Robot che ballano">
       <p>"Nessuno ha insegnato a GPT-3, o GPT-4, a fare i calcoli. Questo comportamento viene fuori dall’addestramento su una grande quantità di dati utilizzando miliardi di parametri" <a href="http://www.labcd.unipi.it/seminari/le-risorse-linguistiche-al-tempo-delle-reti-neurali/"  target="_blank">ha spiegato il professore Felice Dell’Orletta</a>, docente di inguistica computazionale all'Università di Pisa e ricercatore al CNR, duarante il seminario citato sopra. "I parametri sono variabili, memorizzarne 2 miliardi vuol dire avere un’infinità di server. Ogni volta che usiamo ChatGPT bruciamo 3 foreste. Per ora abbiamo dei super computer che nessuno può gestire, a parte 2 o 3 aziende che hanno decomposto tutto il web in micro parti di informazione che in qualche modo ricollegano tramite la rete neurale in maniera intelligente, ovvero attraverso un qualche tipo di comportamento che non è casuale. <br>
       ChatGPT riorganizza l’informazione e la riutilizza in maniera da permettere di risolvere dei task anche quando questi task non sono conosciuti. Questa cosa è intelligenza? No, è un comportamento emergente che viene fuori da una simulazione del dato umano. Quando un modello in qualche modo simulerà al 100% un comportamento che tu consideri intelligente, sta a te definirlo intelligente oppure no, però sta simulando un comportamento, e da questa simulazione verranno fuori tanti altri comportamenti.
       È vero che il dato linguistico manca di correlazione con la concretezza del mondo reale, però contiene tanta informazione. Non è un caso che questi comportamenti emergenti si siano visti la prima volta sui testi, gli stessi algoritmi sono stati applicati anche alle immagini, ma non è  emerso lo stesso comportamento intelligente. Lo abbiamo potuto osservare sul testo. Non è una casualità che le parole, che la capacità del linguaggio, siano forse ciò che più ci distingue dagli altri animali. <br>
