Add Reddit uses and future uses

--- a/site/index.html
+++ b/site/index.html
@@ -116,7 +116,7 @@
 
 
       <h2 id="sez2">Come funziona ChatGPT</h2>
-      <img src="img/dall-e12.png" class="image-container" alt="Robot in luogo con alberi e fiori"> 
+      <img src="img/dall-e12.png" class="image-container" alt="Robot in luogo con alberi e fiori">
         <p>ChatGPT è un chatbot basato su intelligenza artificiale specializzato nel dialogo uomo-macchina. È in grado di comporre poesie, opere teatrali, testi di canzoni su un determinato tema e persino di spiegare le barzellette. Come siamo arrivati ad un modello con un livello di competenza morfosintattica così accurata e in grado di generare varie tipologie di testi in maniera veloce e tremendamente plausibile, che dimostra anche raffinate capacità di ragionamento?<br>
 
           “Il Natural Language Processing ha visto miglioramenti senza precedenti nel corso degli ultimi anni, e i progressi sono avvenuti con la sostituzione dei cosiddetti sistemi di apprendimento tradizionali (modelli statistici, basati su sistemi di machine learning) a modelli di algoritmi deep learning" <a href="https://alemiaschi.github.io/files/Seminario_LABCD_8_marzo_2023.pdf"  target="_blank">ha spiegato Alessio Miaschi</a>, ricercatore del CNR, durante un <a href="http://www.labcd.unipi.it/seminari/le-risorse-linguistiche-al-tempo-delle-reti-neurali/" target="_blank"> seminario di cultura digitale</a> all'Università di Pisa.<br>
@@ -210,10 +210,10 @@
       <h2>Utilizzi di ChatGPT</h2>
       <p>
         Le persone interagiscono con ChatGPT in maniera variegata, dando libero sfogo alle proprie fantasie, inclinazioni e interessi. <br>
-        In generale, il chatbot viene utilizzato per scrivere elaborati di testo di vario tipo (email, presentazioni, introduzioni, racconti, sceneggiature etc) e per fare sintesi; è di aiuto nei compiti scolastici e accademici, e nella programmazione (è usato per creare siti web, o per fare debugging dei codici e chiedere spiegazioni). 
+        In generale, il chatbot viene utilizzato per scrivere elaborati di testo di vario tipo (email, presentazioni, introduzioni, racconti, sceneggiature etc) e per fare sintesi; è di aiuto nei compiti scolastici e accademici, e nella programmazione (è usato per creare siti web, o per fare debugging dei codici e chiedere spiegazioni).
       </p>
       <p>
-        Su Twitter, sono stati individuati alcuni utlizzzi particolari di ChatGPT:
+        Su Twitter, sono stati individuati alcuni utlizzi particolari di ChatGPT:
       </p>
       <h3 class="green">Lingua inglese</h3>
       <p>
@@ -232,7 +232,7 @@
         <b><i>Some interesting questions people ask ChatGPT: Can you generate a recipe for a three course meal? #ChatGPT #ChatGPTQuestions #Openai</i></b>
       </p>
       <p>
-        <b><i>Chat GPT and Me — I ask ChatGPT <a href="https://t.co/b22jyyuqfj" target="_blank"> to Daydream</a></i></b> 
+        <b><i>Chat GPT and Me — I ask ChatGPT <a href="https://t.co/b22jyyuqfj" target="_blank"> to Daydream</a></i></b>
       </p>
       <p>
         <b><i>I interviewed #ChatGPT who is a music enthusiast. Now here is yet another interesting use case of this AI. You could ask ChatGPT to pretend to be any role you want it to be and interview its AI just like you would interview a real person</i></b>
@@ -250,7 +250,7 @@
         <b><i>Chiesto a chat gpt di <a href="https://t.co/0MngK293WM" target="_blank"> scrivere un testo usando i titoli della tracklist</a> e STO URLANDO</i></b>
       </p>
       <p>
-        <b><i>Ho chiesto a #ChatGPT se #dantealighieri si potesse considerare #fascista. Ecco la sua  <a href="https://t.co/WJnSAlCjN" target="_blank">risposta</a></i></b> 
+        <b><i>Ho chiesto a #ChatGPT se #dantealighieri si potesse considerare #fascista. Ecco la sua  <a href="https://t.co/WJnSAlCjN" target="_blank">risposta</a></i></b>
       </p>
       <p>
         Purtroppo anche questo contenuto non è più disponibile.
@@ -263,6 +263,29 @@
       </p>
       <p>
         <b><i>Ho chiesto a #ChatGPT di scrivere un monologo per #Sanremo2023. Se qualcuno di voi conduttori ancora non ha preparato niente oppure ha scritto la solita roba cringe prendete e <a href="https://t.co/DEHBWf4VSv">usufruitene tutti</a> </i></b>
+      </p>
+      <p>
+      <h3 class="green">Reddit</h3>
+        Su Reddit in lingua inglese, sono stati individuati altri usi di ChatGPT, tra cui:
+      <ul id="reddit_use">
+        <li>come generatore di numeri casuali;</li>
+        <li>come motore di ricerca;</li>
+        <li>per scopi didattici da insegnanti e studenti;</li>
+        <li>come chatbot per conversare normalmente o in determinati linguaggi, come slang da strada o linguaggi estremamente informali;</li>
+        <li>come consulente finanziario, in particolare per attuare strategie di investimento per i prossimi anni.</li>
+      </ul>
+      </p>
+      <p>
+        Tuttavia, su Reddit si discute anche dei possibili usi futuri dello strumento, con relative implicazioni positive e negative per la società. In particolare, tra gli argomenti più dibattuti ci sono:
+      <ul id="reddit_future_use">
+        <li>casi di fake news generate da ChatGPT e che egli stesso ha dichiarato come fatti reali. Molti commenti discutono della mancanza di consapevolezza da parte degli utenti su cosa sia e come debba essere usato ChatGPT, alcuni sostengono che venga usato impropriamente come motore di ricerca e che i contenuti generati dovrebbero essere sempre compresi e riscritti dagli utenti, in quanto le IA non hanno ancora raggiunto un'intelligenza tale da poterci fare totalmente affidamento;</li>
+        <li>il caso di un assistente avvocato che, per lo svolgimento della professione, si affida anche a ChatGPT e questo da alcuni utenti non viene visto di buon occhio;</li>
+        <li>qualche utente che pensa che ChatGPT possa finire come il Watson di IBM, il quale ha avuto un primo periodo di visibilità per poi sparire nel dimenticatoio. Inoltre, si parla anche della possibilità che ChatGPT venga rimpiazzato da IA con meno blocchi morali e che il settore sarà enormemente diverso tra due anni;</li>
+        <li>presunta incoerenza da parte di alcuni insegnanti nel bandire l'uso di Wikipedia per poi permettere quello di ChatGPT. La critica principale risiede nel fatto che entrambi richiedano verifiche da parte dell'utente sulla veridicità dei contenuti;</li>
+        <li>la sostituzione di determinati lavori, in particolare si parla dei fisioterapisti e del fatto che andrebbero sostituiti solamente quelli ritenuti meno bravi degli altri;</li>
+        <li>la possibilità che, specialmente negli Stati in cui il sistema sanitario è a pagamento, le IA siano più efficienti degli umani nel diagnosticare malattie ai pazienti e nel controllare, ed eventualmente negare, l'idoneità degli stessi al trattamento sanitario;</li>
+        <li>il rischio di sostituzione di intere aziende tramite l'uso di IA.</li>
+      </ul>
       </p>
     </div>
   </div>
@@ -299,7 +322,7 @@
       </div>
       <h3>Esplorazioni sui dati in inglese</h3>
       <p>
-        <b class="green">Math</b>: svariati tweet in lingua inglese si riferiscono all'incapacità di ChatGPT di svolgere compiti matematici complessi, altri invece ne esaltano le doti, dunque l'opinione degli utenti su Twitter sembra divisa su questo tema. 
+        <b class="green">Math</b>: svariati tweet in lingua inglese si riferiscono all'incapacità di ChatGPT di svolgere compiti matematici complessi, altri invece ne esaltano le doti, dunque l'opinione degli utenti su Twitter sembra divisa su questo tema.
       </p>
       <p>
         <b class="green">Erotic</b>: alcuni utenti hanno interagito con ChatGPT per creare componimenti erotici di varia tipologia, dal racconto sci-fi alla poesia. È stato individuato in questo ambito un utilizzo ancora più particolare:
@@ -324,9 +347,9 @@
         <b><i>Funny how chatgpt dont wan’t you to write a moviescript where a girl falsly report sexual assault #ChatGPT #beliveallwomen</i></b>
       </p>
       <p>
-        <b><i>I see what all the fuss is about #chatgpt  'Write a song about <a href="https://t.co/o2ybFps9j8" target="_blank"> smashing the patriarchy in the style of the sex pistols</a></i></b> 
+        <b><i>I see what all the fuss is about #chatgpt  'Write a song about <a href="https://t.co/o2ybFps9j8" target="_blank"> smashing the patriarchy in the style of the sex pistols</a></i></b>
       </p>
-      
+
       <h3 class="green">Parole più frequenti su Twitter in Italiano</h3>
       <p>Anche per l'italiano le parole più utilizzate nei post sono <b class="green">scritto</b>, <b class="green">strumento</b>, <b class="green">chiesto</b>, <b class="green">futuro</b>,<b class="green">lavoro</b>, <b class="green">fare</b>, <b class="green">tecnologia</b>, <b class="green">Google</b>, ma compaiono anche <b class="green">Bing</b> e <b class="green">Microsoft</b>, partner commerciali di OpenAi. </p>
       <div class="image-container">
@@ -371,7 +394,7 @@
     </div>
   </div>
 
-  
+
 
    <!-- Intelligenza section -->
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey" id="intelligenza">
