Add index for every section

--- a/site/index.html
+++ b/site/index.html
@@ -205,13 +205,46 @@
   <!-- Utilizzi section -->
   <div class="w3-container w3-light-grey w3-center w3-padding-32" id="utilizzi">
     <h1 class="main-titles"><b>Interazione Uomo Macchina</b></h1>
+    <div id="top-of-toc3" class="css-1ez01tu-BodyContainer e1s8k40s0">
+      <div class="css-uiylu1-LeftRailComponents e1s8k40s2">
+        <div class="TocContainer">
+          <div id="toc-block3" class="TableOfContentsContainer">
+            <a href="#sez7" id="toc-element-03" class="ElementWrapper-choicer">
+              <div class="pallino"></div>
+              <div class="scritta">
+                <div>Utilizzi di ChatGPT</div>
+              </div>
+            </a>
+            <a href="#sez8" id="toc-element-1-3" class="ElementWrapper-choicer">
+              <div class="pallino"></div>
+              <div class="scritta">
+                <div>Twitter</div>
+              </div>
+            </a>
+            <a href="#sez9" id="toc-element-3-3" class="ElementWrapper-choicer">
+              <div class="pallino"></div>
+              <div class="scritta">
+                <div>Reddit</div>
+              </div>
+            </a>
+            <a href="#sez10" id="toc-element-3-4" class="ElementWrapper-choicer">
+              <div class="pallino"></div>
+              <div class="scritta">
+                <div>Argomenti più discussi</div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
    <img src="img/dall-e5.png" alt="Robot che dialoga con una bambina" class="w3-image w3-center w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify w3-container">
-      <h2>Utilizzi di ChatGPT</h2>
+      <h2 id="sez7">Utilizzi di ChatGPT</h2>
       <p>
         Le persone interagiscono con ChatGPT in maniera variegata, dando libero sfogo alle proprie fantasie, inclinazioni e interessi. <br>
         In generale, il chatbot viene utilizzato per scrivere elaborati di testo di vario tipo (email, presentazioni, introduzioni, racconti, sceneggiature etc) e per fare sintesi; è di aiuto nei compiti scolastici e accademici, e nella programmazione (è usato per creare siti web, o per fare debugging dei codici e chiedere spiegazioni).
       </p>
+      <h2 id="sez8">Twitter</h2>
       <p>
         Su Twitter, sono stati individuati alcuni utlizzi particolari di ChatGPT:
       </p>
@@ -264,7 +297,7 @@
       <p>
         <b><i>Ho chiesto a #ChatGPT di scrivere un monologo per #Sanremo2023. Se qualcuno di voi conduttori ancora non ha preparato niente oppure ha scritto la solita roba cringe prendete e <a href="https://t.co/DEHBWf4VSv">usufruitene tutti</a> </i></b>
       </p>
-      <h3 class="green">Reddit</h3>
+      <h2 id="sez9">Reddit</h2>
       <p>
           Su Reddit in lingua inglese, sono stati individuati altri usi di ChatGPT, tra cui:
       </p>
@@ -288,6 +321,7 @@
           <li>il rischio di sostituzione di intere aziende tramite l'uso di IA.</li>
         </ul>
       <div id="topic-modeling">
+        <h2 id="sez10">Argomenti più discussi</h2>
         <p>
           Di seguito è riportato il grafico sugli argomenti più dibattuti su Twitter e Reddit riguardanti ChatGPT.
         </p>
@@ -300,10 +334,30 @@
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey" id="trends">
     <div class="w3-content w3-justify w3-container">
       <h1 class="main-titles"><b>Parole e tendenze</b></h1>
+      <div id="top-of-toc4" class="css-1ez01tu-BodyContainer e1s8k40s0">
+        <div class="css-uiylu1-LeftRailComponents e1s8k40s2">
+          <div class="TocContainer">
+            <div id="toc-block4" class="TableOfContentsContainer">
+              <a href="#sez11" id="toc-element-04" class="ElementWrapper-choicer">
+                <div class="pallino"></div>
+                <div class="scritta">
+                  <div>Parole più frequenti</div>
+                </div>
+              </a>
+              <a href="#sez12" id="toc-element-1-4" class="ElementWrapper-choicer">
+                <div class="pallino"></div>
+                <div class="scritta">
+                  <div>Trigrammi più frequenti</div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <img src="img/dall-e11.png" alt="Robot che esegue calcoli" class="w3-image w3-padding-32 w3-center force-center" width="600" height="650">
       <div class="graphics-btn-container">
-        <h2>Parole più frequenti</h2>
+        <h2 id="sez11">Parole più frequenti</h2>
         <button id="graphics1-btn-words">Reddit</button>
         <button id="graphics2-btn-words">Twitter.it</button>
         <button id="graphics3-btn-words">Twitter.com</button>
@@ -383,7 +437,7 @@
       </p>
 
       <div class="graphics-btn-container">
-        <h2>Trigrammi più frequenti</h2>
+        <h2 id="sez12">Trigrammi più frequenti</h2>
         <button id="graphics1-btn-trigrams">Reddit</button>
         <button id="graphics2-btn-trigrams">Twitter.it</button>
         <button id="graphics3-btn-trigrams">Twitter.com</button>
@@ -400,11 +454,37 @@
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey" id="intelligenza">
     <div class="w3-content w3-justify w3-container">
       <h1 class="main-titles"><b>Intelligenza Artificiale</b></h1>
+      <div id="top-of-toc5" class="css-1ez01tu-BodyContainer e1s8k40s0">
+        <div class="css-uiylu1-LeftRailComponents e1s8k40s2">
+          <div class="TocContainer">
+            <div id="toc-block5" class="TableOfContentsContainer">
+              <a href="#sez13" id="toc-element-05" class="ElementWrapper-choicer">
+                <div class="pallino"></div>
+                <div class="scritta">
+                  <div>ChatGPT è realmente in grado di capire?</div>
+                </div>
+              </a>
+              <a href="#sez14" id="toc-element-1-5" class="ElementWrapper-choicer">
+                <div class="pallino"></div>
+                <div class="scritta">
+                  <div>Proprietà emergenti</div>
+                </div>
+              </a>
+              <a href="#sez15" id="toc-element-3-5" class="ElementWrapper-choicer">
+                <div class="pallino"></div>
+                <div class="scritta">
+                  <div>ChatGPT è intelligente?</div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
       <img src="img/dall-e4.png" alt="Robot immerso in una dimensione onirica" class="w3-image w3-center w3-padding-32 force-center" width="600" height="650">
-      <h2>ChatGPT è realmente in grado di capire?</h2>
+      <h2 id="sez13">ChatGPT è realmente in grado di capire?</h2>
       <p>I large language models come ChatGPT sono talmente grandi e complessi da suscitare sorprese inaspettate: hanno iniziato a mostrare comportamenti sorprendenti, che non erano stati previsti. <br>
        “Sono meravigliato dalle capacità che questi modelli hanno sviluppato” <a href="https://www.quantamagazine.org/the-unpredictable-abilities-emerging-from-large-ai-models-20230316/" target="_blank"> ha dichiarato Ethan Dyer</a>, computer scientist di Google Research che lavora da anni nel campo dell’AI. “È sorprendente perché questi modelli in teoria hanno una sola direttiva: prendere in input una stringa di testo e predire cosa verrà dopo, ripetutamente, su basi puramente statistiche. Gli esperti nel settore avevano previsto che con l’aumentare della dimensione dei dati sarebbero migliorate le performance su task già noti, ma non si aspettavano che i modelli all’improvviso sarebbero stati in grado di svolgere così tante nuove (e imprevedibili) attività”.</p>
-      <h2>Proprietà emergenti</h2>
+      <h2 id="sez14">Proprietà emergenti</h2>
       <img src="img/dall-e14.png" class="image-container-right" alt="Robot che saluta">
       <p>A quanto pare i LLMs sembrano sviluppare centinaia di capacità non previste - dai calcoli matematici alla produzione di testi e di codici, fino al riconoscimento dei titoli di film tramite emoji (come in un esperimento condotto dal team di Dyer).<br>
       I modelli linguistici odierni sono stati dimensionati principalmente in base a tre fattori: quantità di calcolo, numero di parametri e dimensione del set di dati di addestramento. Un'abilità è considerata "emergente" se non è presente nei modelli più piccoli ma lo è in quelli più grandi. In generale, si può considerare l'emergere di nuove proprietà come una funzione di molte variabili correlate, la scala in cui si osserva per la prima volta l'emergere di un'abilità dipende da una serie di fattori e non è una proprietà immutabile, le prestazioni sembrano migliorare notevolmente oltre un certo ordine di grandezza dei parametri.
@@ -414,7 +494,7 @@
       Effettivamente non sappiamo spiegare il loro comportamento, non sappiamo come sono fatti, sappiamo che usano una semplice legge di probabilità, ma con tantissime parole e processi ora sanno rispondere anche a domande complicate […] Il sistema apprende il significato delle parole nel contesto, quante più parole o frasi gli vengono sottoposte tanto più è dettagliata la rappresentazione delle parole che esso produce.
       Il comportamento emergente non è al momento spiegabile, nemmeno gli stessi ricercatori che lo stanno osservando sono in grado di spiegarlo, ha sorpreso tutti. Ci sono degli studi. Alcuni sostengono che questi sistemi non abbiano  capacità di fare ragionamenti matematici o logici, nessuno ha mai insegnato loro a fare conti, eppure in certi casi riesce a fare anche ragionamenti complessi. <br>
       In genere i sistemi di apprendimento automatico arrivano ad un certo plateau, la cosa sorprendente è che nel caso dei language model questo non è avvenuto, non si vede ancora la curva rallentare la crescita, con l’aggiunta di nuovi dati la curva continua a crescere. Ci sono  risultati più stupefacenti: più si aumentano i dati, più avviene fenomeno chiamato delle capacità emergenti: il sistema diventa in grado di fare cose che non sapeva fare, che non erano previste. Spuntano fuori, c’è una specie di salto quantico che avviene a certo momento con la crescita della dimensione dei sistemi”.</p>
-      <h2>ChatGPT è intelligente?</h2>
+      <h2 id="sez15">ChatGPT è intelligente?</h2>
       <img src="img/dall-e15.png" class="image-container" alt="Robot che ballano">
       <p>"Nessuno ha insegnato a GPT-3, o GPT-4, a fare i calcoli. Questo comportamento viene fuori dall’addestramento su una grande quantità di dati utilizzando miliardi di parametri" <a href="http://www.labcd.unipi.it/seminari/le-risorse-linguistiche-al-tempo-delle-reti-neurali/"  target="_blank">ha spiegato il professore Felice Dell’Orletta</a>, docente di inguistica computazionale all'Università di Pisa e ricercatore al CNR, duarante il seminario citato sopra. "I parametri sono variabili, memorizzarne 2 miliardi vuol dire avere un’infinità di server. Ogni volta che usiamo ChatGPT bruciamo 3 foreste. Per ora abbiamo dei super computer che nessuno può gestire, a parte 2 o 3 aziende che hanno decomposto tutto il web in micro parti di informazione che in qualche modo ricollegano tramite la rete neurale in maniera intelligente, ovvero attraverso un qualche tipo di comportamento che non è casuale. <br>
       ChatGPT riorganizza l’informazione e la riutilizza in maniera da permettere di risolvere dei task anche quando questi task non sono conosciuti. Questa cosa è intelligenza? No, è un comportamento emergente che viene fuori da una simulazione del dato umano. Quando un modello in qualche modo simulerà al 100% un comportamento che tu consideri intelligente, sta a te definirlo intelligente oppure no, però sta simulando un comportamento, e da questa simulazione verranno fuori tanti altri comportamenti.
