Translate image description from english to italian

--- a/site/index.html
+++ b/site/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="w3-third">
-      <img src="img/dall-e9.png" onclick="onClick(this)" alt="Robot and humans playing card games and drinking mojito in a tropical forest with a lot of animals, surrealistic paintings and futuristic style">
+      <img src="img/dall-e9.png" onclick="onClick(this)" alt="Robot e umani giocano a carte e bevono mojito in una foresta tropicale con tanti animali, quadri surreali e stile futuristico">
     </div>
   </div>
 
