Update Reddit words chart

--- a/site/index.html
+++ b/site/index.html
@@ -182,7 +182,7 @@
       <img src="img/dall-e3.png" alt="Computer circondato da robot" class="image-container-right">
       <p>
         Al fine di determinare come le persone hanno recepito questa nuovo tool, sono stati recuperati post dai social media Reddit e Twitter, in lingua inglese e italiana, ed è stata effettuata la Sentiment Analysis con 2 strumenti diversi, NLTK e Textblob, 2 librerie Python che permettono di eseguire operazioni di <i>Natural Language Processing</i> su testi.<br>
-        <i>L'anallisi del sentimento</i> consiste in un processo di categorizzazione digitale di pezzi di testo attraverso l'uso di algoritmi, in modo da poter definire se una frase ha connotazione positiva, neutra oppure negativa.
+        <i>L'analisi del sentimento</i> consiste in un processo di categorizzazione digitale di pezzi di testo attraverso l'uso di algoritmi, in modo da poter definire se una frase ha connotazione positiva, neutra oppure negativa.
       </p><br>
 
       <h2 id="sez6">Sentiment analysis sui dataset in italiano e inglese</h2>
