--- a/site/index.html
+++ b/site/index.html
@@ -364,6 +364,7 @@
         <button id="graphics3-btn-words">Twitter.com</button>
       </div>
       <div id="graphics-container-words" class="chartContainer"></div>
+      <div id="graphics-container-words2" class="chartContainer"></div>
 
       <h3 class="green">Parole più frequenti su Twitter in Inglese</h3>
       <p>Come si può osservare dalle <i>word cloud</i>, le parole più utilizzate nei post sono <b class="green">ask</b>, <b class="green">question</b>, <b class="green">write</b>, <b class="green">create</b>, <b class="green">content</b>, <b class="green">future</b>, <b class="green">technology</b>, <b class="green">Google</b> termini che rimandano ad un utilizzo di ChatGPT in vari ambiti e domini legati alla produzione di contenuti testuali.</p>
