--- a/site/index.html
+++ b/site/index.html
@@ -254,7 +254,7 @@
         <b><i>Just for fun, we asked ChatGPT to write a haiku for us on fake news. And, <a href="https://t.co/ecglrw7ub" target="_blank">it delivered</a></i>
       </b>
       <p>
-        Purtroppo il tweet non è più disponibile e non è stato possibile leggere l'<i>haiku</i>, componimento poetico nato in Giappone nel XVII secolo).
+        Purtroppo il tweet non è più disponibile e non è stato possibile leggere l'<i>haiku</i>, componimento poetico nato in Giappone nel XVII secolo.
       </p>
       <p>
         <b><i>We asked chat GPT to write a sex toy joke and this is what it wrote: Why was the vibrator feeling cold? Because it left its batteries in the refrigerator!</i></b>
