--- a/site/index.html
+++ b/site/index.html
@@ -341,10 +341,14 @@
       <div id="topic-modeling">
         <h2 id="sez10">Argomenti più discussi</h2>
         <p>
-          Di seguito è riportato il grafico sugli argomenti più dibattuti su Twitter e Reddit riguardanti ChatGPT.
+          Il grafico seguente è un confronto tra topics nei dataset di <strong>Twitter</strong> e <strong>Reddit</strong>, calcolati con l'utilizzo di NLTK Vader e TextBLob.
+          Interessante osservare come NLTK Vader registri una sostanziale differenza di sentimento sul topic della <i>privacy</i> e del <i>ban</i> tra i due social network, con una netta oscillazione tra valori positivi e negativi. 
         </p>
         <div id="topic-container" class="chartContainer"></div>
       </div>
+      <p>
+        Di minore rilievo il confronto basato sui valori registrati da TextBlob, dove si nota un minore distacco sui topics nel confronto tra i post di Twitter e Reddit.
+      </p>
     </div>
   </div>
 
