--- a/site/index.html
+++ b/site/index.html
@@ -342,12 +342,12 @@
         <h2 id="sez10">Argomenti più discussi</h2>
         <p>
           Il grafico seguente è un confronto tra topics nei dataset di <strong>Twitter</strong> e <strong>Reddit</strong>, calcolati con l'utilizzo di NLTK Vader e TextBLob.
-          Interessante osservare come NLTK Vader registri una sostanziale differenza di sentimento sul topic della <i>privacy</i> e del <i>ban</i> tra i due social network, con una netta oscillazione tra valori positivi e negativi. 
+          Interessante osservare come NLTK Vader registri una sostanziale differenza di sentimento sui <i>topics</i> della <i>privacy</i> e del <i>ban</i> tra i due social network, con una netta oscillazione tra valori positivi e negativi. 
         </p>
         <div id="topic-container" class="chartContainer"></div>
       </div>
       <p>
-        Di minore rilievo il confronto basato sui valori registrati da TextBlob, dove si nota un minore distacco sui topics nel confronto tra i post di Twitter e Reddit.
+        Il confronto basato sui valori registrati da TextBlob mostra un minore distacco sugli argomenti discussi nel confronto tra i post di Twitter e Reddit.
       </p>
     </div>
   </div>
@@ -403,26 +403,26 @@
         <b class="green">Erotic</b>: alcuni utenti hanno interagito con ChatGPT per creare componimenti erotici di varia tipologia, dal racconto sci-fi alla poesia. È stato individuato in questo ambito un utilizzo ancora più particolare:
       </p>
       <p>
-        <b><i>Writing erotic prompts for Chat GPT hoping to be the first person to make AI cum. It’s like the Turing Test</i></b>
+        <b><i>• Writing erotic prompts for Chat GPT hoping to be the first person to make AI cum. It’s like the Turing Test</i></b>
       </p>
       <p>
         <b class="green">Sex</b>: per la lingua inglese gli argomenti trattati variano dalla riflessione sul sessismo alle notizie riguardo al "traffico sessuale" o allo <a href="https://time.com/6247678/openai-chatgpt-kenya-workers" target="_blank"> sfruttamento di manodopera in Kenya</a> per il <i>fine tuning</i> di ChatGPT.
       </p>
       <p>
       <p>
-        <b><i>From #ChatGPT Gender identity is not the same as biological sex, which refers to the physical and physiological characteristics typically associated with being male or female, such as chromosomes, hormones, and reproductive organs.</i></b>
+        <b><i>• From #ChatGPT Gender identity is not the same as biological sex, which refers to the physical and physiological characteristics typically associated with being male or female, such as chromosomes, hormones, and reproductive organs.</i></b>
       </p>
       <p>
-        <b><i>Sexual tension between me and #ChatGPT is on fire</i></b>
+        <b><i>• Sexual tension between me and #ChatGPT is on fire</i></b>
       <p>
       <p>
-        <b><i>Just had sex with \#ChatGPT. <a href="https://t.co/v8uJY2MNdr" target="_blank">Shit felt human to me...</a> </i></b>
+        <b><i>• Just had sex with \#ChatGPT. <a href="https://t.co/v8uJY2MNdr" target="_blank">Shit felt human to me...</a> </i></b>
       </p>
       <p>
-        <b><i>Funny how chatgpt dont wan’t you to write a moviescript where a girl falsly report sexual assault #ChatGPT #beliveallwomen</i></b>
+        <b><i>• Funny how chatgpt dont wan’t you to write a moviescript where a girl falsly report sexual assault #ChatGPT #beliveallwomen</i></b>
       </p>
       <p>
-        <b><i>I see what all the fuss is about #chatgpt  'Write a song about <a href="https://t.co/o2ybFps9j8" target="_blank"> smashing the patriarchy in the style of the sex pistols</a></i></b>
+        <b><i>• I see what all the fuss is about #chatgpt  'Write a song about <a href="https://t.co/o2ybFps9j8" target="_blank"> smashing the patriarchy in the style of the sex pistols</a></i></b>
       </p>
 
       <h3 class="green">Parole più frequenti su Twitter in Italiano</h3>
@@ -447,16 +447,16 @@
         sito della Polizia</a>. "La realtà dei casi rivela infatti che la maggioranza delle vittime non è più giovanissima e che, magari dopo una relazione sentimentale finita male e con figli che vivono autonomamente, si diventa facile preda chattando davanti al computer o su uno smartphone".
       </p>
       <p>
-        <b><i>Temo che il successo è ancora significativo. Aggiungi #ChatGPT ed il gioco è fatto #RomanceScam #Sexstortion</i></b>
+        <b><i>• Temo che il successo è ancora significativo. Aggiungi #ChatGPT ed il gioco è fatto #RomanceScam #Sexstortion</i></b>
       </p>
       <p>
         Altri 2 utenti invece hanno utilizzato la chat per attività sessuali:
       </p>
       <p>
-        <b><i>Allora ChatGPT: Come convincere le donne a mandarti le foto dei piedi senza sembrare un maniaco sessuale</i></b>
+        <b><i>• Allora ChatGPT: Come convincere le donne a mandarti le foto dei piedi senza sembrare un maniaco sessuale</i></b>
       </p>
       <p>
-        <b><i>#ChatGPT ecco cosa succede se chiedi di <a href="https://t.co/2t8mdch6Ak" target="_blank">simulare una chat a sfondo sessuale </a> </i></b>
+        <b><i>• #ChatGPT ecco cosa succede se chiedi di <a href="https://t.co/2t8mdch6Ak" target="_blank">simulare una chat a sfondo sessuale </a> </i></b>
       </p>
 
       <div class="graphics-btn-container">
