--- a/site/index.html
+++ b/site/index.html
@@ -380,6 +380,10 @@
       <img src="img/dall-e11.png" alt="Robot che esegue calcoli" class="w3-image w3-padding-32 w3-center force-center" width="600" height="650">
       <div class="graphics-btn-container">
         <h2 id="sez11">Parole più frequenti</h2>
+        <p>
+          Il grafico seguente mostra la distribuzione delle trenta parole con maggiore ricorrenza nei tre dataset per ciascuna categoria di sentimento.
+          Ciascun cerchio è relativo ad una parola, il colore ne indica la percezione secondo il <i>sentiment analyser</i>, mentre l'altezza ne riporta la frequenza assoluta.
+        </p>
         <button id="graphics1-btn-words">Reddit</button>
         <button id="graphics2-btn-words">Twitter.it</button>
         <button id="graphics3-btn-words">Twitter.com</button>
